--- a/index.html
+++ b/index.html
@@ -1,255 +1,101 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="uk">
 <head>
-    <meta charset="UTF-8" />
-    <title>Мой лендинг</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body {
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            color: #222;
-            background: #f5f5f5;
-            line-height: 1.5;
-        }
-        header {
-            padding: 20px 5vw;
-            background: #ffffff;
-            border-bottom: 1px solid #e5e5e5;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: sticky;
-            top: 0;
-            backdrop-filter: blur(8px);
-        }
-        header .logo {
-            font-weight: 700;
-            font-size: 1.1rem;
-        }
-        nav a {
-            margin-left: 16px;
-            text-decoration: none;
-            font-size: 0.95rem;
-            color: #444;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .hero {
-            padding: 60px 5vw 40px;
-            display: grid;
-            grid-template-columns: minmax(0, 1.4fr) minmax(0, 1fr);
-            gap: 40px;
-            align-items: center;
-        }
-        .hero h1 {
-            font-size: clamp(2rem, 4vw, 3rem);
-            margin-bottom: 16px;
-        }
-        .hero p {
-            font-size: 1rem;
-            margin-bottom: 24px;
-            max-width: 480px;
-            color: #555;
-        }
-        .btn {
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            padding: 12px 20px;
-            border-radius: 999px;
-            border: none;
-            font-size: 0.95rem;
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .btn-primary {
-            background: #111827;
-            color: #fff;
-        }
-        .btn-primary:hover {
-            opacity: 0.9;
-        }
-        .btn-outline {
-            border: 1px solid #d1d5db;
-            margin-left: 8px;
-            background: #fff;
-            color: #111827;
-        }
-
-        .hero-card {
-            background: #fff;
-            border-radius: 16px;
-            padding: 24px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.06);
-        }
-        .hero-card h2 {
-            font-size: 1.1rem;
-            margin-bottom: 12px;
-        }
-        .hero-card ul {
-            list-style: none;
-        }
-        .hero-card li {
-            margin-bottom: 8px;
-            font-size: 0.95rem;
-        }
-
-        .section {
-            padding: 40px 5vw;
-            background: #fff;
-            margin-top: 12px;
-        }
-        .section:nth-of-type(even) {
-            background: #f9fafb;
-        }
-        .section h2 {
-            font-size: 1.5rem;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .feature {
-            background: #fff;
-            border-radius: 14px;
-            padding: 18px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.03);
-            font-size: 0.95rem;
-        }
-        .feature h3 {
-            font-size: 1rem;
-            margin-bottom: 8px;
-        }
-
-        .contact {
-            max-width: 480px;
-            margin: 0 auto;
-        }
-        .contact label {
-            display: block;
-            font-size: 0.9rem;
-            margin-bottom: 4px;
-        }
-        .contact input,
-        .contact textarea {
-            width: 100%;
-            padding: 10px 12px;
-            border-radius: 10px;
-            border: 1px solid #d1d5db;
-            margin-bottom: 14px;
-            font-size: 0.95rem;
-            font-family: inherit;
-            resize: vertical;
-        }
-        footer {
-            padding: 20px 5vw;
-            font-size: 0.85rem;
-            color: #6b7280;
-            text-align: center;
-        }
-
-        @media (max-width: 768px) {
-            .hero {
-                grid-template-columns: 1fr;
-                padding-top: 40px;
-            }
-            header {
-                position: static;
-            }
-            nav {
-                display: none;
-            }
-        }
-    </style>
+    <meta charset="UTF-8">
+    <title>MASYCH Clinic – Псевдосайт</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header>
-    <div class="logo">Мой сайт</div>
-    <nav>
-        <a href="#about">О нас</a>
-        <a href="#features">Преимущества</a>
-        <a href="#contact">Контакты</a>
+
+<header class="site-header">
+    <!-- Верхняя полоска -->
+    <div class="top-bar">
+        <div class="container top-bar-inner">
+            <div class="logo">
+                <!-- сюда потом подставишь свой логотип (SVG/PNG) -->
+                <span class="logo-box">MASYCH<br><span class="logo-sub">clinic</span></span>
+            </div>
+
+            <div class="top-info">
+                <div class="top-item">
+                    <span class="icon">📍</span>
+                    <div class="top-text">
+                        <div>м. Івано-Франківськ,</div>
+                        <div>вулиця Бельведерська, 25А</div>
+                    </div>
+                </div>
+
+                <div class="top-item">
+                    <span class="icon">🕒</span>
+                    <div class="top-text">
+                        <div>Пн–Пт: 09:00–18:00</div>
+                        <div>Сб: 09:00–15:00</div>
+                    </div>
+                </div>
+
+                <div class="top-item phone-item">
+                    <span class="icon">📱</span>
+                    <a href="tel:+380671304827" class="phone">
+                        +38 (067) 130 48 27
+                    </a>
+                </div>
+
+                <div class="top-item socials">
+                    <a href="#" class="social-circle">TG</a>
+                    <a href="#" class="social-circle">Vb</a>
+                    <a href="#" class="social-circle">WA</a>
+                </div>
+
+                <div class="top-item">
+                    <a href="#" class="btn-primary">Записатися на прийом</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Нижнее меню -->
+    <nav class="main-nav">
+        <div class="container nav-inner">
+            <ul class="nav-menu">
+                <li><a href="#">Стоматологія ▾</a></li>
+                <li><a href="#">Косметологія ▾</a></li>
+                <li><a href="#">Про нас ▾</a></li>
+                <li><a href="#">Наші лікарі</a></li>
+                <li><a href="#">Ціни ▾</a></li>
+                <li><a href="#">Портфоліо</a></li>
+                <li><a href="#">Програма лояльності</a></li>
+                <li><a href="#">Новини</a></li>
+                <li><a href="#">Контакти</a></li>
+            </ul>
+
+            <button class="nav-search" aria-label="Пошук">
+                🔍
+            </button>
+        </div>
     </nav>
 </header>
 
 <main>
+    <!-- Hero блок -->
     <section class="hero">
-        <div>
-            <h1>Лёгкий одностраничный сайт за один вечер</h1>
-            <p>Краткий текст о том, что вы делаете: услуги, продукт или личное портфолио. Всё по делу, без лишнего шума.</p>
-            <div>
-                <a href="#contact" class="btn btn-primary">Оставить заявку</a>
-                <a href="#about" class="btn btn-outline">Узнать больше</a>
-            </div>
-        </div>
-        <div class="hero-card">
-            <h2>Что вы получите</h2>
-            <ul>
-                <li>• Адаптивный сайт, который работает на телефоне и ноутбуке</li>
-                <li>• Быструю загрузку без тяжёлых фреймворков</li>
-                <li>• Простое редактирование текста прямо в HTML</li>
-            </ul>
+        <div class="hero-overlay"></div>
+        <div class="container hero-inner">
+            <h1 class="hero-title">
+                Безболісна стоматологія та апаратна косметологія
+                в центрі Івано-Франківська
+            </h1>
+            <a href="#" class="btn-secondary hero-btn">Отримати консультацію</a>
         </div>
     </section>
 
-    <section id="about" class="section">
-        <h2>О проекте</h2>
-        <p style="max-width: 700px; margin: 0 auto; text-align: center;">
-            Здесь можно кратко описать, кто вы и чем занимаетесь: компания, фрилансер, продукт, мероприятие и т.п.
-            Отредактируйте этот текст под себя.
-        </p>
-    </section>
-
-    <section id="features" class="section">
-        <h2>Преимущества</h2>
-        <div class="features">
-            <div class="feature">
-                <h3>Просто</h3>
-                <p>Никаких CMS и сборок. Один HTML-файл, который легко поменять в любом редакторе.</p>
-            </div>
-            <div class="feature">
-                <h3>Быстро</h3>
-                <p>Деплой на бесплатный хостинг за пару минут: GitHub Pages, Netlify или Vercel.</p>
-            </div>
-            <div class="feature">
-                <h3>Легко расширять</h3>
-                <p>Добавляйте блоки, картинки и секции по мере роста проекта.</p>
-            </div>
+    <!-- Заголовок “Наші послуги” -->
+    <section class="services-intro">
+        <div class="container">
+            <h2 class="section-title">Наші послуги</h2>
         </div>
-    </section>
-
-    <section id="contact" class="section">
-        <h2>Связаться с нами</h2>
-        <form class="contact">
-            <label for="name">Имя</label>
-            <input id="name" type="text" placeholder="Ваше имя" />
-
-            <label for="email">Email</label>
-            <input id="email" type="email" placeholder="you@example.com" />
-
-            <label for="message">Сообщение</label>
-            <textarea id="message" rows="4" placeholder="Коротко опишите, что вам нужно"></textarea>
-
-            <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: 4px;">
-                Отправить
-            </button>
-        </form>
     </section>
 </main>
 
-<footer>
-    © <span id="year"></span> Мой сайт. Все права защищены.
-</footer>
-
-<script>
-    document.getElementById("year").textContent = new Date().getFullYear();
-</script>
 </body>
 </html>
