--- a/index.html
+++ b/index.html
@@ -104,10 +104,64 @@
         </div>
     </section>
 
-    <!-- Блок "Наші послуги" -->
-    <section class="services-intro">
-        <div class="container">
-            <h2 class="section-title">Наші послуги</h2>
+    <!-- Сектор "Стоматологія" с карточками услуг -->
+    <section class="services-dentistry">
+        <div class="container services-dentistry-inner">
+
+            <div class="services-dentistry-left">
+                <h2 class="services-title">Стоматологія</h2>
+            </div>
+
+            <div class="services-dentistry-right">
+                <div class="services-grid">
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Лікування без болю</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Імплантація зубів</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Протезування зубів</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Хірургічне лікування</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Лікування зубів</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Пародонтологія</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Ортодонтія</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">
+                            Професійна гігієна та відбілювання
+                        </div>
+                    </div>
+
+                    <div class="service-card service-card-all">
+                        <div class="service-card-all-text">Всі послуги</div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
