--- a/index.html
+++ b/index.html
@@ -104,7 +104,13 @@
         </div>
     </section>
 
-    <!-- Сектор "Стоматологія" с карточками услуг -->
+    <section class="services-intro">
+        <div class="container">
+            <h2 class="section-title">Наші сертифікати</h2>
+        </div>
+    </section>
+
+
     <section class="services-dentistry">
         <div class="container services-dentistry-inner">
 
@@ -165,6 +171,11 @@
         </div>
     </section>
 
+    <section class="services-intro">
+        <div class="container">
+            <h2 class="section-title">Наші роботи</h2>
+        </div>
+    </section>
 </main>
 
 </body>
