--- a/index.html
+++ b/index.html
@@ -104,13 +104,7 @@
         </div>
     </section>
 
-    <section class="services-intro">
-        <div class="container">
-            <h2 class="section-title">Наші сертифікати</h2>
-        </div>
-    </section>
-
-
+    <!-- Сектор "Стоматологія" с карточками услуг -->
     <section class="services-dentistry">
         <div class="container services-dentistry-inner">
 
@@ -171,12 +165,130 @@
         </div>
     </section>
 
-    <section class="services-intro">
-        <div class="container">
-            <h2 class="section-title">Наші роботи</h2>
-        </div>
-    </section>
 </main>
+
+<!-- ФУТЕР -->
+<footer class="site-footer">
+    <div class="container footer-inner">
+
+        <!-- Колонка бренда -->
+        <div class="footer-col footer-col-brand">
+            <div class="footer-logo-box">
+                MASYCH<br><span class="logo-sub">clinic</span>
+            </div>
+
+            <p class="footer-text-main">
+                Весь спектр стоматологічних<br>
+                та косметологічних послуг в<br>
+                центрі Івано-Франківська
+            </p>
+
+            <div class="footer-socials">
+                <a href="#" class="footer-social-icon">IG</a>
+                <a href="#" class="footer-social-icon">FB</a>
+                <a href="#" class="footer-social-icon">YT</a>
+            </div>
+
+            <p class="footer-small-text">
+                Реєстраційне досьє від 04.10.2018 №02/0410-М<br>
+                Наказ МОЗ про ліцензування медичної практики<br>
+                №1848 від 11.10.2018
+            </p>
+
+            <div class="footer-rating">
+                <div class="footer-rating-line">
+                    <span class="footer-rating-score">4.8</span>
+                    <span class="footer-stars">★★★★★</span>
+                </div>
+                <div class="footer-rating-sub">На основі 227 відгуків</div>
+                <div class="footer-rating-powered">powered by <span class="google-text">Google</span></div>
+                <a href="#" class="footer-rating-btn">review us on G</a>
+            </div>
+        </div>
+
+        <!-- Колонка "Стоматологія" -->
+        <div class="footer-col">
+            <h3 class="footer-title">Стоматологія</h3>
+            <ul class="footer-list">
+                <li>Лікування без болю</li>
+                <li>Імплантація зубів</li>
+                <li>Протезування зубів</li>
+                <li>Хірургічне лікування</li>
+                <li>Лікування зубів</li>
+                <li>Діагностика</li>
+                <li>Пародонтологія</li>
+                <li>Ортодонтія</li>
+                <li>Професійна гігієна та відбілювання</li>
+            </ul>
+        </div>
+
+        <!-- Колонка "Косметологія" -->
+        <div class="footer-col">
+            <h3 class="footer-title">Косметологія</h3>
+            <ul class="footer-list">
+                <li>Лазерна косметологія Asclepion</li>
+                <li>Лазерна епіляція Asclepion</li>
+                <li>Ін’єкційна косметологія</li>
+                <li>Доглядова косметологія</li>
+                <li>SMAS-ліфтинг Ultrafomer 3</li>
+                <li>RF-ліфтинг</li>
+                <li>Преміальний догляд AquaPure</li>
+                <li>Вагінальне (інтимне) омолодження</li>
+                <li>Інтимна контурна пластика</li>
+                <li>Екзосоми</li>
+                <li>Діагностика</li>
+            </ul>
+        </div>
+
+        <!-- Колонка "Контакти" -->
+        <div class="footer-col footer-col-contacts">
+            <h3 class="footer-title">Контакти</h3>
+
+            <div class="footer-contact-item">
+                <span class="footer-contact-icon">📱</span>
+                <span>+38 067 534 62 75</span>
+            </div>
+            <div class="footer-contact-item">
+                <span class="footer-contact-icon">📱</span>
+                <span>+38 050 751 69 37</span>
+            </div>
+
+            <div class="footer-contact-messengers">
+                <a href="#" class="footer-messenger">TG</a>
+                <a href="#" class="footer-messenger">Vb</a>
+                <a href="#" class="footer-messenger">WA</a>
+            </div>
+
+            <div class="footer-contact-item">
+                <span class="footer-contact-icon">✉️</span>
+                <span>masychv@gmail.com</span>
+            </div>
+
+            <div class="footer-contact-item">
+                <span class="footer-contact-icon">📍</span>
+                <span>м. Івано-Франківськ,<br>вулиця Бельведерська, 25А</span>
+            </div>
+
+            <div class="footer-contact-item">
+                <span class="footer-contact-icon">🕒</span>
+                <span>
+                    Пн–Пт: 09:00–18:00<br>
+                    Сб: 09:00–15:00<br>
+                    Нд: вихідний
+                </span>
+            </div>
+
+            <a href="#" class="btn-footer-appointment">
+                Записатися на прийом
+            </a>
+        </div>
+
+    </div>
+
+    <a href="tel:+380671304827" class="floating-call" aria-label="Зателефонувати">
+        ☎
+    </a>
+</footer>
 
 </body>
 </html>
