--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
                     </a>
                 </div>
 
-                <div class="top-item socials">
-                    <a href="#" class="social-circle">TG</a>
-                    <a href="#" class="social-circle">Vb</a>
-                    <a href="#" class="social-circle">WA</a>
-                </div>
-
                 <div class="top-item">
                     <a href="#" class="btn-primary">Записатися на прийом</a>
                 </div>
@@ -57,9 +51,9 @@
     <nav class="main-nav">
         <div class="container nav-inner">
             <ul class="nav-menu">
-                <li><a href="#">Стоматологія ▾</a></li>
                 <li><a href="#">Про нас ▾</a></li>
-                <li><a href="#">Ціни ▾</a></li>
+                <li><a href="#">Стоматологія ▾</a></li>
+                <li><a href="#">Наші робити ▾</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </div>
@@ -162,6 +156,37 @@
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <!-- Секція "Наші сертифікати" -->
+    <section class="certificates-section">
+        <div class="container">
+            <h2 class="section-title">Наші сертифікати</h2>
+        </div>
+    </section>
+
+    <!-- Секція з горизонтальним скролом зображень -->
+    <section class="horizontal-scroll-section">
+        <div class="horizontal-scroll-container">
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 1">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 2">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 3">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 4">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 5">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 6">
+            </div>
         </div>
     </section>
 
