--- a/index.html
+++ b/index.html
@@ -98,15 +98,44 @@
         </div>
     </section>
 
+    <!-- Секція "Наші сертифікати" -->
+    <section class="certificates-section">
+        <div class="container">
+            <h2 class="section-title">Наші сертифікати</h2>
+        </div>
+    </section>
+
+    <!-- Секція з горизонтальним скролом зображень -->
+    <section class="horizontal-scroll-section">
+        <div class="horizontal-scroll-container">
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 1">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 2">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 3">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 4">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 5">
+            </div>
+            <div class="scroll-item">
+                <img src="images/IMG_0556.jpg" alt="Сертифікат 6">
+            </div>
+        </div>
+    </section>
+
     <!-- Сектор "Стоматологія" с карточками услуг -->
     <section class="services-dentistry">
         <div class="container services-dentistry-inner">
 
-            <div class="services-dentistry-left">
-                <h2 class="services-title">Стоматологія</h2>
-            </div>
+            <h2 class="services-title">Стоматологія</h2>
 
-            <div class="services-dentistry-right">
+            <div class="services-dentistry-content">
                 <div class="services-grid">
                     <div class="service-card">
                         <div class="service-card-icon">✓</div>
@@ -155,14 +184,14 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
 
-    <!-- Секція "Наші сертифікати" -->
+
+    <!-- Секція "Наші роботи" -->
     <section class="certificates-section">
         <div class="container">
-            <h2 class="section-title">Наші сертифікати</h2>
+            <h2 class="section-title">Наші роботи</h2>
         </div>
     </section>
 
