--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
     <nav class="main-nav">
         <div class="container nav-inner">
             <ul class="nav-menu">
-                <li><a href="#">Про нас ▾</a></li>
-                <li><a href="#">Стоматологія ▾</a></li>
-                <li><a href="#">Наші робити ▾</a></li>
+                <li><a href="#about-us">Про нас ▾</a></li>
+                <li><a href="#dentistry">Стоматологія ▾</a></li>
+                <li><a href="#our-works">Наші роботи ▾</a></li>
                 <li><a href="#">Контакти</a></li>
             </ul>
         </div>
@@ -63,7 +63,7 @@
 <main>
 
     <!-- Блок врача -->
-    <section class="hero hero-doctor">
+    <section id="about-us" class="hero hero-doctor">
         <div class="container hero-doctor-inner">
 
             <div class="doctor-photo">
@@ -130,7 +130,7 @@
     </section>
 
     <!-- Сектор "Стоматологія" с карточками услуг -->
-    <section class="services-dentistry">
+    <section id="dentistry" class="services-dentistry">
         <div class="container services-dentistry-inner">
 
             <h2 class="services-title">Стоматологія</h2>
@@ -187,38 +187,36 @@
         </div>
     </section>
 
-
     <!-- Секція "Наші роботи" -->
-    <section class="certificates-section">
+    <section id="our-works" class="works-section">
         <div class="container">
             <h2 class="section-title">Наші роботи</h2>
         </div>
     </section>
 
-    <!-- Секція з горизонтальним скролом зображень -->
-    <section class="horizontal-scroll-section">
+    <!-- Секція з горизонтальним скролом робіт -->
+    <section class="horizontal-scroll-section works-scroll">
         <div class="horizontal-scroll-container">
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 1">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 1">
             </div>
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 2">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 2">
             </div>
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 3">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 3">
             </div>
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 4">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 4">
             </div>
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 5">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 5">
             </div>
-            <div class="scroll-item">
-                <img src="images/IMG_0556.jpg" alt="Сертифікат 6">
+            <div class="scroll-item work-item">
+                <img src="images/IMG_0556.jpg" alt="Робота 6">
             </div>
         </div>
     </section>
-
 </main>
 
 <!-- ФУТЕР -->
