--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         </div>
     </section>
 
+    <!-- Сепаратор -->
+    <div class="section-divider"></div>
+
     <!-- Секція "Наші сертифікати" -->
     <section class="certificates-section">
         <div class="container">
@@ -139,17 +142,7 @@
                 <div class="services-grid">
                     <div class="service-card">
                         <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">Лікування без болю</div>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">Імплантація зубів</div>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">Протезування зубів</div>
+                        <div class="service-card-text">Ортодонтія</div>
                     </div>
 
                     <div class="service-card">
@@ -159,28 +152,12 @@
 
                     <div class="service-card">
                         <div class="service-card-icon">✓</div>
+                        <div class="service-card-text">Імплантація зубів</div>
+                    </div>
+
+                    <div class="service-card">
+                        <div class="service-card-icon">✓</div>
                         <div class="service-card-text">Лікування зубів</div>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">Пародонтологія</div>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">Ортодонтія</div>
-                    </div>
-
-                    <div class="service-card">
-                        <div class="service-card-icon">✓</div>
-                        <div class="service-card-text">
-                            Професійна гігієна та відбілювання
-                        </div>
-                    </div>
-
-                    <div class="service-card service-card-all">
-                        <div class="service-card-all-text">Всі послуги</div>
                     </div>
                 </div>
             </div>
