--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>MASYCH Clinic – Псевдосайт</title>
+    <title>VipDent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -54,7 +54,7 @@
                 <li><a href="#about-us">Про нас ▾</a></li>
                 <li><a href="#dentistry">Стоматологія ▾</a></li>
                 <li><a href="#our-works">Наші роботи ▾</a></li>
-                <li><a href="#">Контакти</a></li>
+                <li><a href="contacts.html">Контакти</a></li>
             </ul>
         </div>
     </nav>
