--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-bar">
         <div class="container top-bar-inner">
             <div class="logo">
-                <span class="logo-box">MASYCH<br><span class="logo-sub">clinic</span></span>
+                <span class="logo-box">VipDent<br><span class="logo-sub">clinic</span></span>
             </div>
 
             <div class="top-info">
@@ -140,25 +140,25 @@
 
             <div class="services-dentistry-content">
                 <div class="services-grid">
-                    <div class="service-card">
+                    <a href="orthodontics.html" class="service-card" style="text-decoration: none;">
                         <div class="service-card-icon">✓</div>
                         <div class="service-card-text">Ортодонтія</div>
-                    </div>
+                    </a>
 
-                    <div class="service-card">
+                    <a href="surgery.html" class="service-card" style="text-decoration: none;">
                         <div class="service-card-icon">✓</div>
                         <div class="service-card-text">Хірургічне лікування</div>
-                    </div>
+                    </a>
 
-                    <div class="service-card">
+                    <a href="implantation.html" class="service-card" style="text-decoration: none;">
                         <div class="service-card-icon">✓</div>
                         <div class="service-card-text">Імплантація зубів</div>
-                    </div>
+                    </a>
 
-                    <div class="service-card">
+                    <a href="treatment.html" class="service-card" style="text-decoration: none;">
                         <div class="service-card-icon">✓</div>
                         <div class="service-card-text">Лікування зубів</div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -239,10 +239,10 @@
         <div class="footer-col">
             <h3 class="footer-title">Стоматологія</h3>
             <ul class="footer-list">
-                <li>Ортодонтія</li>
-                <li>Хірургічне лікування</li>
-                <li>Імплантація зубів</li>
-                <li>Лікування зубів</li>
+                <li><a href="orthodontics.html" style="color: inherit; text-decoration: none;">Ортодонтія</a></li>
+                <li><a href="surgery.html" style="color: inherit; text-decoration: none;">Хірургічне лікування</a></li>
+                <li><a href="implantation.html" style="color: inherit; text-decoration: none;">Імплантація зубів</a></li>
+                <li><a href="treatment.html" style="color: inherit; text-decoration: none;">Лікування зубів</a></li>
             </ul>
         </div>
 
