--- a/surgery.html
+++ b/surgery.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <title>Контакти | VipDent</title>
+    <title>Хірургічне лікування - VipDent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -13,7 +13,9 @@
     <div class="top-bar">
         <div class="container top-bar-inner">
             <div class="logo">
-                <span class="logo-box">MASYCH<br><span class="logo-sub">clinic</span></span>
+                <a href="index.html" style="text-decoration: none;">
+                    <span class="logo-box">MASYCH<br><span class="logo-sub">clinic</span></span>
+                </a>
             </div>
 
             <div class="top-info">
@@ -61,54 +63,23 @@
 </header>
 
 <main>
-    <section class="contacts-page-section">
+    <section class="service-detail-section">
         <div class="container">
-            <h1 class="section-title" style="padding: 60px 0 40px;">Контакти</h1>
-            
-            <div class="contacts-grid">
-                <div class="contacts-info-block">
-                    <h2>Наші координати</h2>
-                    
-                    <div class="contacts-info-item">
-                        <h3 class="contacts-info-label">Адреса:</h3>
-                        <p class="contacts-info-value">м. Івано-Франківськ, вулиця Бельведерська, 25А</p>
-                    </div>
-
-                    <div class="contacts-info-item">
-                        <h3 class="contacts-info-label">Телефони:</h3>
-                        <p class="contacts-info-value">
-                            <a href="tel:+380675346275">+38 067 534 62 75</a><br>
-                            <a href="tel:+380507516937">+38 050 751 69 37</a>
-                        </p>
-                    </div>
-
-                    <div class="contacts-info-item">
-                        <h3 class="contacts-info-label">Графік роботи:</h3>
-                        <p class="contacts-info-value">
-                            Пн–Пт: 09:00–18:00<br>
-                            Сб: 09:00–15:00<br>
-                            Нд: вихідний
-                        </p>
-                    </div>
-
-                    <div class="contacts-info-item">
-                        <h3 class="contacts-info-label">Email:</h3>
-                        <p class="contacts-info-value">masychv@gmail.com</p>
-                    </div>
-
-                    <div class="contact-page-socials">
-                        <a href="#" class="contact-page-social-link">IG</a>
-                        <a href="#" class="contact-page-social-link">FB</a>
-                        <a href="#" class="contact-page-social-link">TG</a>
-                    </div>
+            <h1 class="section-title">Хірургічне лікування</h1>
+            <div class="service-detail-content">
+                <div class="service-detail-text">
+                    <p>Хірургічна стоматологія в нашій клініці — це безболісні та безпечні маніпуляції будь-якої складності.</p>
+                    <p>Ми використовуємо сучасне обладнання та методи седації для вашого комфорту. Наші послуги:</p>
+                    <ul>
+                        <li>Видалення зубів будь-якої складності (в т.ч. зубів мудрості)</li>
+                        <li>Кісткова пластика та синус-ліфтинг</li>
+                        <li>Резекція верхівки кореня</li>
+                        <li>Пластика вуздечки губи та язика</li>
+                    </ul>
+                    <a href="#" class="btn-secondary">Записатися на консультацію</a>
                 </div>
-
-                <div class="contacts-map">
-                    <div class="contacts-map-placeholder">
-                        <span class="icon">📍</span>
-                        <p style="font-weight: 600;">Карта проїзду</p>
-                        <p style="font-size: 14px;">(Тут буде інтерактивна карта Google Maps)</p>
-                    </div>
+                <div class="service-detail-image">
+                    <img src="images/IMG_0556.jpg" alt="Хірургічне лікування">
                 </div>
             </div>
         </div>
